test/parser/negative/N1050_syntax_errors_in_observables_recovery.bngl
# FAIL
# OUTPUT: 9: error: syntax error, unexpected '!'
# OUTPUT: 19: error: syntax error, unexpected ->
# OUTPUT: 23: error: syntax error, unexpected '@'



begin observables
   Molecules a b !


   
   
   Moleculex a b c  # not a syntax error, only semantic



   
   Molecules a -> b 
   
   
   
   @aa a b
   
   
end observables
